# SlicerChronicle

./: CMakeLists.txt  SlicerChronicle.py
Experiments/: install.sh
Graph/: CMakeLists.txt  Graph.py
SceneViewer/: CMakeLists.txt  SceneViewer.py
SlicerChronicle/: CMakeLists.txt  SlicerChronicle.py
SlicerChronicle/site/: code.js  index.html
app/: index.html
site/: code.js  index.html
